modify CMakeLists use file command

--- a/decorator/src/CMakeLists.txt
+++ b/decorator/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
-ADD_EXECUTABLE(decorator BigTrouser.cpp FineryDecorator.cpp Human.cpp Man.cpp Necktie.cpp Suit.cpp TShirt.cpp Woman.cpp main.cpp)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+file(GLOB SRC_LIST *.cpp)
+add_executable(decorator ${SRC_LIST})
