--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
-sudo: false
+sudo: required
 compiler:
-  - g++-4.8
+  - g++
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install cmake
