--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ compiler:
   - g++
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install cmake
-script: mkdir build && cd build && cmake ..
+script: mkdir build && cd build && cmake .. && make
