--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 file(GLOB SUB_DIR_LIST RELATIVE ${PROJECT_SOURCE_DIR} *)
 
 foreach(SUB_DIR ${SUB_DIR_LIST})
