--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 file(GLOB SUB_DIR_LIST RELATIVE ${PROJECT_SOURCE_DIR} *)
 
 foreach(SUB_DIR ${SUB_DIR_LIST})
