--- a/algorithm/src/CMakeLists.txt
+++ b/algorithm/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-file(GLOB SRC_LIST *.c)
+file(GLOB SRC_LIST *.cpp)
 add_executable(algorithm ${SRC_LIST})
+target_link_libraries(algorithm libgtest.a libgmock.a)
