use aux_source_directory for cmake
Change-Id: Iaca66ab011828bf20ef5f8293260d84e786a1c44

--- a/algorithm/src/CMakeLists.txt
+++ b/algorithm/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-file(GLOB SRC_LIST *.cpp)
+aux_source_directory(. SRC_LIST)
 add_executable(algorithm ${SRC_LIST})
 target_link_libraries(algorithm libgtest.a libgmock.a)
