--- a/decorator/src/CMakeLists.txt
+++ b/decorator/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 include_directories(${PROJECT_SOURCE_DIR}/include)
-file(GLOB SRC_LIST *.cpp)
+aux_source_directory(. SRC_LIST)
 add_executable(decorator ${SRC_LIST})
