--- a/algorithm/CMakeLists.txt
+++ b/algorithm/CMakeLists.txt
@@ -1,4 +1,5 @@
-include_directories(${PROJECT_SOURCE_DIR}/include)
-link_directories(${PROJECT_SOURCE_DIR}/lib)
+cmake_minimum_required(VERSION 2.6)
 project(algorithm)
+include_directories(${PROJECT_SOURCE_DIR}/../include)
+link_directories(${PROJECT_SOURCE_DIR}/../lib)
 add_subdirectory(src algorithm)
