--- a/algorithm/CMakeLists.txt
+++ b/algorithm/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 project(algorithm)
 include_directories(${PROJECT_SOURCE_DIR}/../include)
 link_directories(${PROJECT_SOURCE_DIR}/../lib)
