--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 2.6)
-#set(CMAKE_C_COMPILER clang)
-#set(CMAKE_CXX_COMPILER clang++)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
-file(GLOB SUB_DIR_LIST RELATIVE ${PROJECT_SOURCE_DIR} *)
 
-foreach(SUB_DIR ${SUB_DIR_LIST})
-    if(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/${SUB_DIR} AND EXISTS ${PROJECT_SOURCE_DIR}/${SUB_DIR}/CMakeLists.txt)
-        message(STATUS "Add subdirectory ${SUB_DIR}")
-        add_subdirectory(${SUB_DIR})
-    endif(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/${SUB_DIR} AND EXISTS ${PROJECT_SOURCE_DIR}/${SUB_DIR}/CMakeLists.txt)
-endforeach(SUB_DIR)
+add_subdirectory(${PROJECT_SOURCE_DIR}/algorithm)
+add_subdirectory(${PROJECT_SOURCE_DIR}/decorator)
+add_subdirectory(${PROJECT_SOURCE_DIR}/facade)
+add_subdirectory(${PROJECT_SOURCE_DIR}/factory_method)
+add_subdirectory(${PROJECT_SOURCE_DIR}/prototype)
+add_subdirectory(${PROJECT_SOURCE_DIR}/proxy)
+add_subdirectory(${PROJECT_SOURCE_DIR}/simple_factory)
+add_subdirectory(${PROJECT_SOURCE_DIR}/strategy)
+add_subdirectory(${PROJECT_SOURCE_DIR}/template_method)
